--- a/public/links.yml
+++ b/public/links.yml
@@ -346,3 +346,10 @@
   desc: 两岸猿声啼不住 轻舟已过万重山
   email: YuZhangWang233@163.com
   color: "#7FC8F8"
+- url: https://yuh1n.gitee.io/
+  avatar: https://yuh1n.gitee.io/images/neko.jpg
+  name: Yuh1n
+  blog: Yuh1n's Blog
+  desc: 天荒地老无人时
+  email: 1667729346@qq.com
+  color: "#f5fffa"
